Style popups and fix text wrapping.

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(246, 242, 231);
   overflow-x: hidden;
 }
 
@@ -13,10 +13,6 @@ body {
   font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
   font-weight: 400;
   font-size: 1.2rem;
-  background-image: url(/images/library.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
   width: 100vw;
   max-width: 100vw;
   margin: 0;
@@ -25,13 +21,18 @@ body {
 .page-container {
   position: relative;
   min-height: 100vh;
-  margin: 0;
+  max-width: 90vw;
+  margin-left: 5vw;
+  background-image: url(/images/library.jpg);
+  background-size: auto 100vh;
+  background-repeat: repeat-y;
+  background-position: center;
 }
 
 .wrapper {
   margin-left: auto;
   margin-right: auto;
-  max-width: 90%;
+  max-width: 100%;
   padding-bottom: 3rem;
   
 }
@@ -61,7 +62,9 @@ header a {
   z-index: 2;
   background-color:rgba(0, 0, 0, .7);
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   text-align: center;
   top: 25%;
   left: 0;
@@ -69,7 +72,7 @@ header a {
   bottom: 0;
   height: 35%;
   font-size: 1.5rem;
-  width: 100vw;
+  width: 90vw;
   margin: 0 auto 0 auto;
 }
 
@@ -85,11 +88,11 @@ header a {
  }
 
 .clear-popup button {
-  display: inline;
   width: 6rem;
   padding: 5px;
   text-align: center;
-  margin-right: 2rem;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .form-popup {
@@ -149,8 +152,8 @@ header a {
   min-width: 200px;
   max-width: 200px;
   min-height: 350px;
-  background-color: rgba(95, 95, 104, .5);
-  border: rgb(219, 208, 208) 3px solid;
+  background-color: rgba(238, 211, 171, 0.9);
+  border: rgb(246, 241, 241) 3px solid;
   border-radius: 10px;
   margin: 1em 0px 0px 1em;
   padding: 0px 10px 0px 10px;
@@ -169,9 +172,12 @@ header a {
   align-self: center;
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
-  border-bottom: solid 3px rgb(219, 208, 208);
+  border-bottom: solid 3px rgb(246, 241, 241);
   margin-bottom: 0px;
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .arrow-container {
@@ -187,10 +193,10 @@ header a {
 
 .fas {
   font-size: 2rem;
-  color: black;
+  color: rgb(52, 55, 88);
   margin-top: auto;
   margin-bottom: auto;
-  transform: rotate(0deg);
+  pointer-events: none;
 }
 
 .card-drop-down, .card-drop-up {
@@ -200,13 +206,12 @@ header a {
   padding: 0;
   margin: 0;
   color: transparent;
-  transition: all .5s ease-in-out;
   height: 0px;
   overflow-y: hidden;
-  -webkit-transition: max-height 0.8s ease-in-out;
-  -moz-transition: max-height 0.8s ease-in-out;
-  -o-transition: max-height 0.8s ease-in-out;
-  transition: max-height 0.8s ease-in-out;
+  -webkit-transition: height 0.5s ease-in-out;
+  -moz-transition: height 0.5s ease-in-out;
+  -o-transition: height 0.5s ease-in-out;
+  transition: height 0.5s ease-in-out;
 }
 
 .card-drop-up {
@@ -220,6 +225,16 @@ header a {
   align-items: center;
   align-self: center;
   margin: 0 auto 0 auto;
+  text-align: center;
+  width: 175px;
+  
+}
+
+.default-text p {
+  overflow-wrap: break-word;
+  word-wrap: break-all;
+  white-space:normal;
+  width: 150px;
 }
 
 .card button {
@@ -234,15 +249,18 @@ header a {
   background-color: rgba(0, 0, 0, 0.5);
   color: rgb(231, 229, 229);
   border: solid transparent 1px;
+  flex-grow: 1;
 }
 
 .card-text {
-  margin: 0px 0px auto 0px;
-  color: rgb(255, 255, 255);
-  line-height: 1;
+  margin: 0px 0px 0px 0px;
+  color: rgb(46, 46, 46);
+  line-height: 1.2;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.2rem;
   overflow-wrap: break-word;
+  padding: 3px;
+  flex-grow: 3;
 }
 
 .card p:first-of-type {
@@ -259,7 +277,8 @@ header a {
   display: flex;
   flex-direction: row;
   justify-content: stretch;
-  margin-top: auto;
+  margin-top: 0;
+  flex-grow: 1;
 }
 
 .switch-container label + span {
@@ -269,8 +288,6 @@ header a {
   padding: 5px;
   text-align: center;
   width: 5.2rem;
-  background-color: rgba(255, 235, 205, .7);
-
 }
 
 .read::before{
@@ -356,7 +373,7 @@ footer {
   flex-direction: row;
   height: 3rem;
   position: absolute;
-  width: 100vw;
+  width: 90vw;
   bottom: 0;
   justify-content: space-between;
 }
@@ -409,4 +426,9 @@ footer div:last-of-type {
   .form-popup{
     max-width: 30vw;
   }
+
+  .page-container {
+    background-size: 90vw 100vh;
+  }
+
 }
